# llm-steering-vectors-for-physics

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
paper/: paper.tex
src/physics_steering_vectors/: __init__.py  __main__.py  activation_collection.py  answer_extraction.py  config.py  data.py  evaluation.py  generation.py  layers.py  logging_utils.py  main.py  modeling.py  phases.py  reporting.py  reproducibility.py  schemas.py  steering.py
tests/: test_activation_collection.py  test_answer_extraction.py  test_config_schemas.py  test_data.py  test_evaluation.py  test_generation.py  test_layers.py  test_logging_utils.py  test_modeling.py  test_module_entrypoint.py  test_phases_main.py  test_reporting.py  test_reproducibility.py  test_steering.py
