[project]
name = "llm-steering-vectors-for-physics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.7",
  "datasets>=3.6",
  "pandas>=2.2",
  "pytest>=8.4",
  "requests>=2.32",
  "steering-vectors>=0.12.1",
  "torch>=2.6",
  "tqdm>=4.67",
  "transformers @ git+https://github.com/huggingface/transformers.git",
]

[project.scripts]
physics-steering = "physics_steering_vectors.main:main"

[tool.uv]
environments = ["sys_platform == 'linux'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_steering_vectors"]
