[project]
name = "llm-steering-vectors-for-physics"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "accelerate>=1.13.0",
  "datasets>=4.8.5",
  "pandas>=3.0.3",
  "pytest>=9.0.3",
  "requests>=2.34.2",
  "steering-vectors>=0.12.2",
  "torch>=2.12.0",
  "tqdm>=4.67.3",
  "transformers>=4.57.6,<5",
]

[project.scripts]
physics-steering = "physics_steering_vectors.main:main"

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_steering_vectors"]
